# ChangeLog for xfce-extra/thunar-thumbnailers
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/thunar-thumbnailers/Attic/ChangeLog,v 1.30 2007/07/09 03:51:08 jer Exp $

  09 Jul 2007; Jeroen Roovers <jer@gentoo.org>
  thunar-thumbnailers-0.2.1.ebuild:
  Stable for HPPA (bug #184267).

*thunar-thumbnailers-0.2.2 (07 Jul 2007)

  07 Jul 2007; Samuli Suominen <drac@gentoo.org>
  +thunar-thumbnailers-0.2.2.ebuild:
  Version bump, featuring ogg theora video thumbnails.

  06 Jul 2007; Lars Weiler <pylon@gentoo.org>
  thunar-thumbnailers-0.2.1.ebuild:
  Stable on ppc; bug #184267.

  06 Jul 2007; Markus Rothe <corsair@gentoo.org>
  thunar-thumbnailers-0.2.1.ebuild:
  Stable on ppc64; bug #184267

  04 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  thunar-thumbnailers-0.2.1.ebuild:
  Stable on sparc

  04 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  thunar-thumbnailers-0.2.1.ebuild:
  alpha/ia64/x86 stable

  04 Jul 2007; Christoph Mende <angelos@gentoo.org>
  thunar-thumbnailers-0.2.1.ebuild:
  Stable on amd64

  04 Jul 2007; Samuli Suominen <drac@gentoo.org>
  thunar-thumbnailers-0.2.1.ebuild:
  Stable on arm.

  14 Jun 2007; Raúl Porcel <armin76@gentoo.org>
  thunar-thumbnailers-0.2.0.ebuild:
  alpha stable

  13 Jun 2007; Samuli Suominen <drac@gentoo.org>
  thunar-thumbnailers-0.2.1.ebuild:
  Keyword for arm.

  01 Jun 2007; Brent Baude <ranger@gentoo.org>
  thunar-thumbnailers-0.2.0.ebuild:
  Marking thunar-thumbnailers-0.2.0 ppc64 stable for bug #178510

*thunar-thumbnailers-0.2.1 (26 May 2007)

  26 May 2007; Samuli Suominen <drac@gentoo.org>
  +thunar-thumbnailers-0.2.1.ebuild:
  Version bump. Enable thumbnailing of raw images which have the generic
  mimetype image/x-dcraw.

  24 May 2007; Lars Weiler <pylon@gentoo.org>
  thunar-thumbnailers-0.2.0.ebuild:
  Stable on ppc; bug #178510.

  21 May 2007; Jeroen Roovers <jer@gentoo.org>
  thunar-thumbnailers-0.2.0.ebuild: