@@ -1,5 +1,6 @@
 DIST thunar-thumbnailers-0.2.1.tar.bz2 79733 RMD160 b2907a0f3a6900419bfba7cd26ce83128eb04b4e SHA1 db392a6f58d1aab400602cda1432e608c0c2254d SHA256 55a83eb0f891d5156ca07ed254ccce969cec31eda9ec2dd4516f0bd1e89f4403
 DIST thunar-thumbnailers-0.2.2.tar.bz2 80169 RMD160 554c644f3502c6dad73b6b1794089c399dec9cbd SHA1 654d7db904b5e6153157f1f96ab8adf27800e248 SHA256 9ffbc258b1cd0cbf897ef325c3459b537411cc6ac15fbb48929792d5a491ca53
+DIST thunar-thumbnailers-0.3.0.tar.bz2 81989 RMD160 c79463be2f27eeded4b2dc495ddeac008a8b47f3 SHA1 6d9723eadb80c621d0e94aaf7f398754641d84ea SHA256 4a36ef073873a7cdc6e1e2f2ef0f903d62b3fa7481bf39f863e438533890ee31
 EBUILD thunar-thumbnailers-0.2.1.ebuild 1162 RMD160 b03c3f966e2c560ca2a799ebbb12dd989efba185 SHA1 f87721df617fbd6cb213dd782e06d607aa68f3c4 SHA256 789132814f55b71b1ba77f93be39437e8a975b05d062aa4960a89ad1f3cd35b9
 MD5 7fde36bbb29bdb41e4a3e95e3163164d thunar-thumbnailers-0.2.1.ebuild 1162
 RMD160 b03c3f966e2c560ca2a799ebbb12dd989efba185 thunar-thumbnailers-0.2.1.ebuild 1162
@@ -8,10 +9,14 @@ EBUILD thunar-thumbnailers-0.2.2.ebuild 1157 RMD160 2e868937ca6135cd01c0e6ec9171
 MD5 18ade61fd00c01de3ce9824dc9eed67d thunar-thumbnailers-0.2.2.ebuild 1157
 RMD160 2e868937ca6135cd01c0e6ec91711e3aca333121 thunar-thumbnailers-0.2.2.ebuild 1157
 SHA256 9bbeb540cf26d0fcaa405e8710f04abe8197ab345a2c634ba616090276f34ec9 thunar-thumbnailers-0.2.2.ebuild 1157
-MISC ChangeLog 4045 RMD160 7198f6447b5832229de2c74ec130fd0bc50f8022 SHA1 76b5b9c11e5191d6d90f22472b4dfab41089cbe8 SHA256 fc52623bd5d42d1d3c7595b17cacc2ac64e97703e44183c88b1d70a06c40b547
-MD5 7f0b49472ecfa9a8fe0e609b1668c043 ChangeLog 4045
-RMD160 7198f6447b5832229de2c74ec130fd0bc50f8022 ChangeLog 4045
-SHA256 fc52623bd5d42d1d3c7595b17cacc2ac64e97703e44183c88b1d70a06c40b547 ChangeLog 4045
+EBUILD thunar-thumbnailers-0.3.0.ebuild 1199 RMD160 0d7b1710808bff580b775be37f5e01a61ace537b SHA1 615c8442480e476e01911c7f1b1b730003d4868c SHA256 8eda425abe1a92ca0203477d1612f47f70993de6ee586107e4f151ee80de6e21
+MD5 c458ded6107337b3276bc4e2645453fa thunar-thumbnailers-0.3.0.ebuild 1199
+RMD160 0d7b1710808bff580b775be37f5e01a61ace537b thunar-thumbnailers-0.3.0.ebuild 1199
+SHA256 8eda425abe1a92ca0203477d1612f47f70993de6ee586107e4f151ee80de6e21 thunar-thumbnailers-0.3.0.ebuild 1199
+MISC ChangeLog 4191 RMD160 0632abfc21d853d53f1f1e53208f3084ac5391d4 SHA1 7a0181efdd3d84af31ff547e1f7d7e6f028bf2d7 SHA256 41fba3ffb10a0578526ad4430a6e96118a4de70d81740c9d74b9ceffb2000d61
+MD5 aab4b0955394ff96d33a6f8fa5dfb780 ChangeLog 4191
+RMD160 0632abfc21d853d53f1f1e53208f3084ac5391d4 ChangeLog 4191
+SHA256 41fba3ffb10a0578526ad4430a6e96118a4de70d81740c9d74b9ceffb2000d61 ChangeLog 4191
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 MD5 c390804e060ffd11a5bbb143434b2b2d metadata.xml 157
 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 metadata.xml 157
@@ -22,3 +27,6 @@ SHA256 6148ebff4458f126d1b05b54d7e9bc82dc22398dde8d5d106e00eaceeef02d67 files/di
 MD5 a40304533d96bc937f0e78ec3c96a48e files/digest-thunar-thumbnailers-0.2.2 277
 RMD160 8756939c3646ad782e9006a79ce4e5f3cf648025 files/digest-thunar-thumbnailers-0.2.2 277
 SHA256 b750aa64b9f32c6edadf614b69ef339387e059086a024d8da1128f9bf512d533 files/digest-thunar-thumbnailers-0.2.2 277
+MD5 3f4ee5429e686409b8815877f9f11654 files/digest-thunar-thumbnailers-0.3.0 277
+RMD160 4d49278cd3bb9476df2b9d6fbfc09239a08405ff files/digest-thunar-thumbnailers-0.3.0 277
+SHA256 72fc8135cef61bd14eacfd27e331687035c03ac24386c3b91c0a8d03ea3f4d00 files/digest-thunar-thumbnailers-0.3.0 277
