@@ -1,0 +1,3 @@
+MD5 b451516fcfa97c8fabf71cf935a2550a thunar-thumbnailers-0.3.0.tar.bz2 81989
+RMD160 c79463be2f27eeded4b2dc495ddeac008a8b47f3 thunar-thumbnailers-0.3.0.tar.bz2 81989
+SHA256 4a36ef073873a7cdc6e1e2f2ef0f903d62b3fa7481bf39f863e438533890ee31 thunar-thumbnailers-0.3.0.tar.bz2 81989
