@@ -1,6 +1,12 @@
 # ChangeLog for xfce-extra/thunar-thumbnailers
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/thunar-thumbnailers/Attic/ChangeLog,v 1.30 2007/07/09 03:51:08 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/thunar-thumbnailers/Attic/ChangeLog,v 1.31 2007/08/15 21:13:07 drac Exp $
+
+*thunar-thumbnailers-0.3.0 (15 Aug 2007)
+
+  15 Aug 2007; Samuli Suominen <drac@gentoo.org>
+  +thunar-thumbnailers-0.3.0.ebuild:
+  Version bump.
 
   09 Jul 2007; Jeroen Roovers <jer@gentoo.org>
   thunar-thumbnailers-0.2.1.ebuild:
